--- a/index.html
+++ b/index.html
@@ -14,7 +14,14 @@
     </head>
     <body>
         <div class="container">
-            
+            <form action="" class="search" id="search-bar">
+                <input type="search" placeholder="Type something..." class="search__input">
+
+                <div class="search__button" id="search-button">
+                    <i class="ri-search-2-line search__icon"></i>
+                    <i class="ri-close-line search__close"></i>
+                </div>
+            </form>
         </div>
 
         <!--=============== MAIN JS ===============-->
